--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
    <div style="color:#FFFFFF;background-image:url('img/galaxy_image.jpg');" class="jumbotron">
     <h1>
-     Brandon Ruggles' AFS Web Page
+     Brandon Ruggles
      </h1>
      <img src="img/portrait.jpg" alt="img/portrait.jpg" width = "200" height = "200" draggable = "false" class="img-circle">
      <h3 style="margin-bottom:40px">
@@ -53,7 +53,7 @@
       <button class='btn btn-info' type='submit' id='resumeButton'>View My Resume <span class='glyphicon glyphicon-arrow-right'></span></button>
       <br>
       <br>
-      <embed hidden src="Resume.pdf" id="resume" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+      <embed hidden src="https://db.tt/FjOl3uwB" id="resume" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
     </p>
       <script type="text/javascript">
         var resumeButton = document.getElementById("resumeButton");
@@ -66,12 +66,12 @@
           if(document.getElementById("resumeButton").innerHTML == "View My Resume <span class=\"glyphicon glyphicon-arrow-right\"></span>")
           {
               document.getElementById("resumeButton").innerHTML = "View My Resume <span class='glyphicon glyphicon-arrow-down'></span>";
-              document.getElementById("resume").outerHTML = "<embed src='Resume.pdf' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
+              document.getElementById("resume").outerHTML = "<embed src='https://db.tt/FjOl3uwB' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
           }
           else
           {
               document.getElementById("resumeButton").innerHTML = "View My Resume <span class='glyphicon glyphicon-arrow-right'></span>";
-                document.getElementById("resume").outerHTML = "<embed hidden src='Resume.pdf' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
+                document.getElementById("resume").outerHTML = "<embed hidden src='https://db.tt/FjOl3uwB' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
           }
         }
       </script>
