--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
    <div style="color:#FFFFFF;background-image:url('img/galaxy_image.jpg');" class="jumbotron">
     <h1>
-     Brandon Ruggles
+     Brandon T. Ruggles
      </h1>
      <img src="img/portrait.jpg" alt="img/portrait.jpg" width = "200" height = "200" draggable = "false" class="img-circle">
      <h3 style="margin-bottom:40px">
