Updated an old link.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
        My Web Projects
       </h2>
       <script type = "text/javascript">
-      createProjectSection("Personal Web Page","View Web Page","View Source","glyphicon glyphicon-file","glyphicon glyphicon-eye-open","","https://github.com/brandonrninefive/PersonalWebPage","You're looking at it! You can check out the source code to this web page by clicking the \"view source\" button above!",false,true);
+      createProjectSection("Personal Web Page","View Web Page","View Source","glyphicon glyphicon-file","glyphicon glyphicon-eye-open","","https://github.com/brandonrninefive/brandonrninefive.github.io","You're looking at it! You can check out the source code to this web page by clicking the \"view source\" button above!",false,true);
        createProjectSection("Bob The Squirrel (On Pause)", "View Web Page", "View Source", "glyphicon glyphicon-file","glyphicon glyphicon-eye-open", "https://db.tt/og70q9b8", "https://github.com/brandonrninefive/BobTheSquirrel", "Bob The Squirrel is a browser-based multiplayer game I have planned that will allow players to connect to game servers hosted by other players. The servers can be hosted by downloading a NodeJS server client, and players can connect to these servers through the use of websockets.", true, true);
        createProjectSection("HTML5 Canvas Test (Seizure Warning)","View Web Page","View Source","glyphicon glyphicon-file","glyphicon glyphicon-eye-open","https://db.tt/n2hw4blR","https://github.com/brandonrninefive/HTML5CanvasTest","This is a simple web page I created in HTML5 to test out the canvas tag. It features a flashing box that can be moved with the arrow keys and resized with the shift and spacebar keys.",true,true);
       </script>
