--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/mystyle.css">
   <script src="js/detailscript.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
  </head>
  <body style="background-image:url('img/sky_image.jpg');">
   <header>
@@ -25,7 +26,7 @@
        <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" style="border-style:none;margin-bottom:20px" alt="View Brandon Ruggles's profile on LinkedIn">
      </a>
      <a class="github-button" href="https://github.com/brandonrninefive" data-style="mega" data-count-href="/brandonrninefive/followers" data-count-api="/users/brandonrninefive#followers">Follow @brandonrninefive</a>
-    <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+
     </div>
    </header>
    <ul class="nav nav-tabs">
@@ -71,7 +72,7 @@
           else
           {
               document.getElementById("resumeButton").innerHTML = "View My Resume <span class='glyphicon glyphicon-arrow-right'></span>";
-                document.getElementById("resume").outerHTML = "<embed hidden src='https://db.tt/FjOl3uwB' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
+              document.getElementById("resume").outerHTML = "<embed hidden src='https://db.tt/FjOl3uwB' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
           }
         }
       </script>
@@ -182,15 +183,14 @@
       </p>
       <h3>
        <b>
-         <span class="glyphicon glyphicon-user"></span> Skype:
+         <span class="glyphicon glyphicon-user"></span> Google Hangouts / Skype:
        </b>
       </h3>
       <p style="font-size:24px;padding-bottom:24px">
         <b>
-           brandonrninefive
+           Please contact me by phone or Email to arrange a meeting.
         </b>
       </p>
-       (Before contacting me on Skype, please contact me by one of the other means listed above)
      </div>
     </div>
     <footer>
