Updated resume link again

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
           if(document.getElementById("resumeButton").innerHTML == "View My Resume <span class=\"glyphicon glyphicon-arrow-right\"></span>")
           {
               document.getElementById("resumeButton").innerHTML = "View My Resume <span class='glyphicon glyphicon-arrow-down'></span>";
-              document.getElementById("resume").outerHTML = "<embed src='http://bit.ly/1TiwhzR' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
+              document.getElementById("resume").outerHTML = "<embed src='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
           }
           else
           {
               document.getElementById("resumeButton").innerHTML = "View My Resume <span class='glyphicon glyphicon-arrow-right'></span>";
-              document.getElementById("resume").outerHTML = "<embed hidden src='https://db.tt/FjOl3uwB' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
+              document.getElementById("resume").outerHTML = "<embed hidden src='https://www.dropbox.com/s/716sb4pbe3taxzd/Resume.pdf?dl=0' id='resume' width='600' height='500' alt='pdf' pluginspage='http://www.adobe.com/products/acrobat/readstep2.html'>"
           }
         }
       </script>
@@ -194,7 +194,7 @@
      </div>
     </div>
     <footer>
-      © 2015 Brandon Ruggles
+      © 2016 Brandon Ruggles
     </footer>
   </body>
 </html>
