Fixed some padding issues and testing a new color scheme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/mystyle.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  </head>
- <body class="blue darken-3">
+ <body class="green lighten-3">
    <div id="pageOne">
      <div id="mainContainer">
        <noscript><h2>This website uses JavaScript for visual effects. Please enable JavaScript or load this page in another browser with JavaScript enabled.</h2></noscript>
@@ -44,6 +44,7 @@
         </span>
       </span>
       </div>
+      <p>You can also email me at <a href="mailto:brandonrninefive@gmail.com">brandonrninefive@gmail.com</a></p>
     </div>
   </div>
   <div id="pageTwo">
@@ -51,15 +52,15 @@
       <div id="imgDiv">
         <img id="bioImage" src="img/portrait.jpg" alt="Portrait">
       </div>
-      <div id="bioCard" class="card-panel light-blue darken-1">
-        <span id="bioCardTitle" class="card-title">About Me</span>
+      <div id="bioCard" class="card-panel teal lighten-1">
+        <span id="bioCardTitle">About Me</span>
         <p id="bioText" class="white-text">
           Hello! My name is Brandon Ruggles, and I'm a senior computer science major at NJIT. When I was younger, I was always amazed by computers and the fact that they could generate entire worlds in the blink of an eye. Over time, that amazement grew into curiousity, and I decided to delve into the world of programming. During my freshman year of high school, I took my first programming class (a simple Visual Basic and C# course), and I ended up liking it so much that I decided programming was what I wanted to do for the rest of my life. Today, I've worked on multiple programming projects on my own, as well as with others, in a variety of languages and on a variety of different platforms. Being curious by nature, I've involved myself in various aspects of programming including app development, web development, scripting on Linux/Unix, and game development. As of late, I've taken an increased interest in lower-level graphics programming and artificial intelligence. My dream is to one day use my programming abilities to change the world for the better, whether it be through a creation of my own, or through my contribution to a project created at a software company. If you wish to learn more about me or my accomplishments, please click the link to my resume above (the rightmost button shaped like a PDF file).
         </p>
       </div>
     </div>
   </div>
-  <footer class="page-footer blue darken-4">
+  <footer class="page-footer brown">
     <div id="copyright" class="footer-copyright">
     © 2016 - 2017 Brandon Ruggles
     </div>
